--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "scripts": {
     "build": "gulp buildAll",
     "build:clean": "gulp cleanPacks",
-    "build:css": "gulp css",
+    "build:css": "gulp buildCSS",
     "build:db": "gulp compilePacks",
     "build:json": "gulp extractPacks",
     "build:watch": "gulp",
